# visualizr

./: .deepsource.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.py  pyproject.toml  renovate.json
.github/: dependabot.yml  hadolint.yml  mergify.yml
.github/workflows/: code_analysis.yml  docker.yaml  docker.yml  github.yaml  github.yml  huggingface.yml  trunk_upgrade.yml
.sonarlint/: connectedMode.json
.trunk/: trunk.yaml
.trunk/configs/: .flake8  .hadolint.yaml  pyrightconfig.json  ruff.toml
chatacter/: app_sadtalker.py  launcher.py  model.py  predict.py  quick_demo.ipynb  settings.py
chatacter/scripts/: extension.py
chatacter/src/: generate_facerender_batch.py  gradio_demo.py  test_audio2coeff.py
chatacter/src/audio2exp_models/: audio2exp.py  networks.py
chatacter/src/audio2pose_models/: audio2pose.py  audio_encoder.py  cvae.py  discriminator.py  networks.py  res_unet.py
chatacter/src/face3d/: extract_kp_videos.py  extract_kp_videos_safe.py  visualize.py
chatacter/src/face3d/data/: base_dataset.py  flist_dataset.py  image_folder.py  template_dataset.py
chatacter/src/face3d/models/: base_model.py  bfm.py  facerecon_model.py  losses.py  networks.py  template_model.py
chatacter/src/face3d/models/arcface_torch/: dataset.py  eval_ijbc.py  losses.py  onnx_helper.py  onnx_ijbc.py  train.py
chatacter/src/face3d/models/arcface_torch/backbones/: mobilefacenet.py
chatacter/src/face3d/models/arcface_torch/eval/: verification.py
chatacter/src/face3d/models/arcface_torch/utils/: plot.py  utils_amp.py  utils_callbacks.py
chatacter/src/face3d/options/: base_options.py
chatacter/src/face3d/util/: detect_lm68.py  generate_list.py  html.py  load_mats.py  my_awing_arch.py  nvdiffrast.py  preprocess.py  skin_mask.py  util.py  visualizer.py
chatacter/src/facerender/: animate.py
chatacter/src/facerender/modules/: dense_motion.py  discriminator.py  generator.py  keypoint_detector.py  mapping.py  util.py
chatacter/src/facerender/sync_batchnorm/: batchnorm.py  unittest.py
chatacter/src/utils/: audio.py  croper.py  hparams.py  init_path.py  model2safetensor.py  paste_pic.py  preprocess.py  text2speech.py  videoio.py
src/: main.rs
src/visualizr/: LIA_Model.py  README.md  __init__.py  __main__.py  app.py  choices.py  config.py  config_base.py  dataset.py  dataset_util.py  demo.py  dist_utils.py  experiment.py  gui.py  model.py  renderer.py  settings.py  templates.py  utils.py
src/visualizr/diffusion/: base.py  diffusion.py  resample.py
src/visualizr/face_sr/: face_enhancer.py  videoio.py
src/visualizr/model/: __init__.py  base.py  blocks.py  diffusion.py  latentnet.py  nn.py  seq2seq.py  unet.py  unet_autoenc.py
src/visualizr/networks/: discriminator.py  encoder.py  generator.py  styledecoder.py  utils.py
