[project]
name = "visualizr"
version = "0.1.0"
description = "Video Generator part of the Chatacter Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "espnet>=202412",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "gradio[mcp]>=5.30.0",
    "moviepy>=1.0.3",
    "python-speech-features>=0.6",
    "pytorch-lightning>=2.5.1.post0",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[project.scripts]
visualizr = "visualizr.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "huggingface-hub[cli,hf-transfer]>=0.31.4",
    "pyrefly>=0.16.1",
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
    "watchfiles>=1.0.5",
]
