[project]
name = "visualizr"
version = "0.1.0"
description = "Video Generator part of the Chatacter Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av>=13.0.0",
    "basicsr>=1.4.2",
    "face-alignment>=1.4.1",
    "fastapi[standard]>=0.112.3",
    "gfpgan>=1.3.8",
    "imageio-ffmpeg>=0.5.1",
    "imageio>=2.35.1",
    "kornia>=0.7.3",
    "librosa>=0.10.2.post1",
    "pydub>=0.25.1",
    "resampy>=0.4.3",
    "soundfile>=0.12.1",
    "torch==2.6.0",
    "torchaudio==0.12.1+cu113",
    "torchvision==0.13.1+cu113",
    "transformers>=4.44.2",
    "yacs>=0.1.8",
    "numpy<2.1",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu113"]
